welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- nums) {
         ^